Don't set option tabs

QPrintDialog deletes all tabs upon destructing, which causes double-free
error.

BUG: 442845